se modifico el nombre de alginos enlaces

--- a/Puremedia10/index.html
+++ b/Puremedia10/index.html
@@ -55,7 +55,7 @@
 	      <nav id="nav-wrap">         
 	         
 	         <a class="mobile-btn" href="#nav-wrap" title="Show navigation">
-	         	<span class='menu-text'>Show Menu</span>
+	         	<span class='menu-text'>Mostrar Menu</span>
 	         	<span class="menu-icon"></span>
 	         </a>
          	<a class="mobile-btn" href="#" title="Hide navigation">
