--- a/Puremedia10/index.html
+++ b/Puremedia10/index.html
@@ -64,12 +64,12 @@
          	</a>         
 
 	         <ul id="nav" class="nav">
-	            <li class="current"><a class="smoothscroll" href="#hero">Home.</a></li>
-		         <li><a class="smoothscroll" href="#portfolio">Works.</a></li>
-	            <li><a class="smoothscroll" href="#services">Services.</a></li>
-	            <li><a class="smoothscroll" href="#about">About.</a></li>
+	            <li class="current"><a class="smoothscroll" href="#hero">Casa.</a></li>
+		         <li><a class="smoothscroll" href="#portfolio">Trabajo.</a></li>
+	            <li><a class="smoothscroll" href="#services">Servicios.</a></li>
+	            <li><a class="smoothscroll" href="#about">Acerca.</a></li>
 	            <li><a class="smoothscroll" href="#journal">Blog.</a></li>	            
-	            <li><a class="smoothscroll" href="#contact">Contact.</a></li>
+	            <li><a class="smoothscroll" href="#contact">Contacto.</a></li>
 	         </ul> 
 
 	      </nav> <!-- /nav-wrap -->	      
