se cambiaron algunos textos

--- a/Puremedia10/index.html
+++ b/Puremedia10/index.html
@@ -160,7 +160,7 @@
                         <img src="images/portfolio/grizzly.jpg" alt="Grizzly">
                         <div class="overlay"></div>                       
                         <div class="portfolio-item-meta">
-          					      <h5>Grizzly</h5>
+          					      <h5>oso grandotote</h5>
                               <p>Photography</p>
           					</div>                         
                      </a>
@@ -301,9 +301,7 @@
 
 	         <hr />
 
-	         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-	         eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-	         voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+	         <p>A ami me gusta el tangananica a ti te gusta el tanganana, tangananica nica nica, tanganana todo lo sabe no sabe na
 	         </p>
 
          </div>
