varias modificaciones para hacerla mas personalizada

--- a/Puremedia10/blog.html
+++ b/Puremedia10/blog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if lt IE 8 ]><html class="no-js ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="no-js ie ie8" lang="en"> <![endif]-->
 <!--[if IE 9 ]><html class="no-js ie ie9" lang="en"> <![endif]-->
@@ -66,11 +66,11 @@
 
 	         <ul id="nav" class="nav">
 	            <li><a href="index.html#hero">Home.</a></li>
-		         <li><a href="index.html#portfolio">Works.</a></li>
-	            <li><a href="index.html#services">Services.</a></li>
-	            <li><a href="index.html#about">About.</a></li>
+		         <li><a href="index.html#portfolio">Trabajos.</a></li>
+	            <li><a href="index.html#services">Servicios.</a></li>
+	            <li><a href="index.html#about">Acerca.</a></li>
 	            <li class="current"><a href="index.html#journal">Blog.</a></li>	        
-	            <li><a href="index.html#contact">Contact.</a></li>
+	            <li><a href="index.html#contact">Contacto.</a></li>
 	         </ul> 
 
 	      </nav> <!-- /nav-wrap -->	      
@@ -88,8 +88,8 @@
 
 			<div class="twelve columns">
 
-				<h1>Our Blog<span>.</span></h1>
-				<p>Aenean condimentum lacus sit amet luctus lobortis.</p>
+				<h1>Nuestro blog<span>.</span></h1>
+				<p>Aqui hacemos algunas cosas chidas.</p>
 
 			</div>			    
 
