--- a/Puremedia10/index.html
+++ b/Puremedia10/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if lt IE 8 ]><html class="no-js ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="no-js ie ie8" lang="en"> <![endif]-->
 <!--[if IE 9 ]><html class="no-js ie ie9" lang="en"> <![endif]-->
@@ -8,7 +8,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Puremedia</title>
+	<title>Pagina super Chidota</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -49,7 +49,7 @@
    	<div class="row header-inner">
 
 	      <div class="logo">
-	         <a class="smoothscroll" href="#hero">Puremedia.</a>
+	         <a class="smoothscroll" href="#hero">Pagina Super Chidota.</a>
 	      </div>
 
 	      <nav id="nav-wrap">         
@@ -59,7 +59,7 @@
 	         	<span class="menu-icon"></span>
 	         </a>
          	<a class="mobile-btn" href="#" title="Hide navigation">
-         		<span class='menu-text'>Hide Menu</span>
+         		<span class='menu-text'>Esconder Menu</span>
          		<span class="menu-icon"></span>
          	</a>         
 
@@ -94,23 +94,23 @@
 					   <!-- Slide -->
 					   <li>
 						   <div class="flex-caption">
-								<h1>Hello, we are puremedia. We make awesome and stunning digital stuff.</h1>	
-								<p><a class="button stroke smoothscroll" href="#about">More About Us</a></p>																   
+								<h1>Hola, Este es mi proyecto de la clase de Programación Web. Hagamos cosas grandes.</h1>	
+								<p><a class="button stroke smoothscroll" href="#about">Más cosas acerca de esto</a></p>																   
 							</div>						
 					   </li>
 
 					   <!-- Slide -->
 					   <li>						
 							<div class="flex-caption">
-								<h1 >We imagine, craft and manage your brand in this new digital world.</h1>	
-								<p><a class="button stroke smoothscroll" href="#portfolio">See Our Works</a></p>									   
+								<h1 >Quiero que el mundo sea un lugar mas seguro. Como Pienso lograr eso?, pues no se pero la pagina esta chida</h1>	
+								<p><a class="button stroke smoothscroll" href="#portfolio">Miren las cosas que hacemos</a></p>									   
 							</div>					
 					   </li>
 
 					   <!-- Slide -->
 					   <li>
 						   <div class="flex-caption">
-								<h1 >Take a look at some of <a class="smoothscroll" href="#portfolio" title="">our works</a> or <a class="smoothscroll" href="#contact" title="">contact us</a> to discuss how we can help you.</h1>
+								<h1 >Echa un vistaso de algunos <a class="smoothscroll" href="#portfolio" title="">trabajillos para que no digan</a> or <a class="smoothscroll" href="#contact" title="">Hablame</a> si quieres por whapp para que salga vara.</h1>
 								<p><a class="button stroke smoothscroll" href="#contact">Get In Touch</a></p>										   
 							</div>
 					   </li>					              
@@ -134,13 +134,13 @@
 
       	<div class="twelve columns">
 
-	         <h1>Our Latest Works<span>.</span></h1>
+	         <h1>Ultimas chambas<span>.</span></h1>
 
 	         <hr />
 
-	         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-	         eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-	         voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+	         <p>Hice algunas cosillas, un jale que me encargo mi tio y otras cosillas, pero estoy chabo asi que no me apuro los jales vendran
+			 tarde o temprano, eso espero, por mientras modifico esta pagina para que se vea chida, a que no la veian venir, fin del counicado
+			 pasensela suave y hay me la saludan(ya saben a quien o a que, jejeje).
 	         </p>
 
 	      </div>
@@ -161,7 +161,7 @@
                         <div class="overlay"></div>                       
                         <div class="portfolio-item-meta">
           					      <h5>oso grandotote</h5>
-                              <p>Photography</p>
+                              <p>Pos quesque soy fotográfo.</p>
           					</div>                         
                      </a>
 
@@ -175,8 +175,8 @@
                         <img src="images/portfolio/hotel.jpg" alt="Hotel Sign">
                         <div class="overlay">
                         	<div class="portfolio-item-meta">
-          					      <h5>Hotel Sign</h5>
-                              <p>Webdesign</p>
+          					      <h5>Paginillas para hotelillos</h5>
+                              <p>Pos quesque soy diseñador de páginas web</p>
           					   </div>
                         </div>                        
                      </a>
@@ -192,7 +192,7 @@
                         <div class="overlay">
                         	<div class="portfolio-item-meta">
           					      <h5>Beetle</h5>
-                              <p>Branding</p>
+                              <p>quesque soy Branding, alguien sabe qué es eso</p>
           					   </div>
                         </div>                        
                      </a>
@@ -207,8 +207,8 @@
                         <img src="images/portfolio/banjo-player.jpg" alt="Banjo Player">
                         <div class="overlay">
                         	<div class="portfolio-item-meta">
-          					      <h5>Banjo Player</h5>
-                              <p>Videography</p>
+          					      <h5>tocador de banyos</h5>
+                              <p>Quesque hago videos</p>
           					   </div>
                         </div>                       
                      </a>
@@ -223,8 +223,8 @@
                      	<img src="images/portfolio/coffee.jpg" alt="Coffee Cup">
                        	<div class="overlay">
                        		<div class="portfolio-item-meta">
-          					      <h5>Coffee Cup</h5>
-                              <p>Photography</p>
+          					      <h5>Tacita de café</h5>
+                              <p>Quesque tomo fotos de tazas, así o más hipster</p>
           					   </div>
                        	</div>                        
                      </a>
@@ -239,8 +239,8 @@
                         <img src="images/portfolio/farmerboy.jpg" alt="Farmerboy">
                         <div class="overlay">
                         	<div class="portfolio-item-meta">
-          					      <h5>Farmerboy</h5>
-                              <p>Branding</p>
+          					      <h5>Chico de granja</h5>
+                              <p>Sigo sin saber que es Branding</p>
           					   </div>
                         </div>                        
                      </a>
@@ -255,8 +255,8 @@
                         <img src="images/portfolio/judah.jpg" alt="Judah">                       
                         <div class="overlay">
                         	<div class="portfolio-item-meta">
-          					      <h5>Judah</h5>
-                              <p>Web Design</p>
+          					      <h5>Estatua chidota</h5>
+                              <p>Sigo diseñando páginas web</p>
           					   </div>
                         </div>                        
                      </a>
@@ -271,8 +271,8 @@
                         <img src="images/portfolio/embossed-paper.jpg" alt="Embossed Paper">
                         <div class="overlay">
                         	<div class="portfolio-item-meta">
-          					      <h5>Embossed Paper</h5>
-                              <p>Branding</p>
+          					      <h5>Cartero</h5>
+                              <p>Por qué usan tanto Branding ya quiero saber que es</p>
           					   </div>
                         </div>                                                
                      </a>                   
@@ -297,7 +297,7 @@
 
    		<div class="twelve columns">
 
-	         <h1>Our Awesome Services<span>.</span></h1>
+	         <h1>Los Asombrosos servicios que proporciono<span>.</span></h1>
 
 	         <hr />
 
@@ -323,7 +323,8 @@
 	               <h3>Marketing.</h3>
 
 	               <div class="service-content">	                  
-		               <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+		               <p>El mercado es muy grande pero hay que saber como llegar a el por esto y mucho mas es necesario contar con una pagina web que
+					   te ayude a ti y a tu empresa a desemborbese en la jungla de los negocios. 
 	         			</p> 
 	               </div>      
 
@@ -335,10 +336,11 @@
 	               	<i class="icon-film"></i>
 	               </div>
 
-	               <h3>Videography.</h3>                  
+	               <h3>Camarografo.</h3>                  
 
 	               <div class="service-content">	                  
-		               <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventoveritatis et quasi architecto beatae vitae dicta sunt explicabo.
+		               <p>Todos los eventos  especiales y cosas destacadas de la vida que tristemente no son muchas, merecen ser recordadas
+					   y dudo que confie en su memoria a largo plazo asi que la mejor opcion es grabarlo.
 	         			</p> 
 	               </div>                                 
 
@@ -350,10 +352,10 @@
 	               	<i class="icon-camera"></i>
 	               </div>
 
-	               <h3>Photography.</h3>
+	               <h3>fotografia.</h3>
 
 	               <div class="service-content">		                  
-		               <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+		               <p>Una forma de recordar desde un momento hasta toda una historia es con las fotografías.
 	         			</p> 
 	               </div>                               
 
@@ -383,7 +385,7 @@
 	               <h3>Web Design.</h3>
 
 	               <div class="service-content">	                  
-		               <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+		               <p>Para que tu negocio crezca y sea visto por todo el mundo, necesitas una página web y que mejor que un profesional para hacerla. 
 	         			</p> 
 	               </div>                                 
 
@@ -398,7 +400,7 @@
 	               <h3>Web Development.</h3>
 
 	               <div class="service-content">
-		               <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+		               <p>
 	         			</p> 
 	               </div>                              
 
