se modifico el estilo

--- a/Puremedia10/index.html
+++ b/Puremedia10/index.html
@@ -667,13 +667,12 @@
 
 	   	<div class="twelve columns">
 
-			   <h1>Our Latest Ramblings<span>.</span></h1>
+			   <h1>a que si le movi <span>.</span></h1>
 
 			   <hr />
 
-			   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-		       eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-		       voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+			   <p>todo lo que hago es solo lo que he aprendido pero puedo aprender de todo asi que puedo hacer
+				  de todo
 		      </p>	         
 
 		    </div>
@@ -777,13 +776,12 @@
 
    		<div class="twelve columns">
 
-	         <h1>Get In Touch With Us<span>.</span></h1>
+	         <h1>Ven con nosotros con solo un toque<span>.</span></h1>
 
 	         <hr />
 
-	         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-	         eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-	         voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+	         <p>Esta es de las partes mas emocionantes de todo el texto, la verdad no pero tenia que escribir algo y que mejor
+				que escribir sobre algo que pienso y que es lo que pienso nada bueno si me preguntan
 	         </p>
 
 	      </div>
@@ -801,12 +799,12 @@
                   <div class="row">
 
 	                  <div class="six columns mob-whole">
-	                  	<label for="contactFname">First Name <span class="required">*</span></label>	      						   
+	                  	<label for="contactFname">Nombre <span class="required">*</span></label>	      						   
 	      					<input name="contactFname" type="text" id="contactFname" placeholder="First Name" value="" />	      					
 	                  </div>
 
 	                  <div class="six columns mob-whole">	
-	                  	<label for="contactLname">Last Name <span class="required">*</span></label>      						   
+	                  	<label for="contactLname">Apeido <span class="required">*</span></label>      						   
 	      					<input name="contactLname" type="text" id="contactLname" placeholder="Last Name" value="" />	      					
 	                  </div>	                        
 
@@ -815,7 +813,7 @@
                   <div class="row">
 
 	                  <div class="six columns mob-whole">	
-	                  	<label for="contactEmail">Email <span class="required">*</span></label>      						   
+	                  	<label for="contactEmail">Correo electronico <span class="required">*</span></label>      						   
 	      					<input name="contactEmail" type="text" id="contactEmail" placeholder="Email" value="" />	      					
 	                  </div>
 
@@ -829,14 +827,14 @@
                   <div class="row">
 
 	                  <div class="twelve columns">
-	                     <label  for="contactMessage">Message <span class="required">*</span></label>
+	                     <label  for="contactMessage">Mensajes <span class="required">*</span></label>
 	                     <textarea name="contactMessage"  id="contactMessage" placeholder="Your Message" rows="10" cols="50" ></textarea>
 	                  </div>
 
                   </div>
 
                   <div>
-                     <button class="submit full-width">Send Message</button>
+                     <button class="submit full-width">Enviar mensaje</button>
                      <div id="image-loader">
                         <img src="images/loader.gif" alt="" />
                      </div>
@@ -849,7 +847,7 @@
             <!-- message box -->
             <div id="message-warning"></div>
             <div id="message-success">
-               <i class="fa fa-check"></i>Your message was sent, thank you!<br />
+               <i class="fa fa-check"></i>Tu mensaje a sido enviado, arigato damiasu o algo asi!<br />
     			</div>
 
          </div> <!-- /contact-form -->      	
@@ -867,7 +865,7 @@
 
          <div class="six columns tab-whole footer-about">
 				
-				<h3>About Puremedia</h3>
+				<h3 style ="text-decoration:underline;" >Acerca de nosotros je</h3>
                
             <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
             Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
@@ -902,7 +900,7 @@
                   <h3 class="contact">Follow Us</h3>
 
                   <ul>
-                     <li><a href="#">Facebook</a></li>
+                     <li><a href="andele/pedro.html">Bootstrap en otro proyecto</a></li>
                      <li><a href="#">Twitter</a></li>
                      <li><a href="#">GooglePlus</a></li>
                      <li><a href="#">Instagram</a></li>
